--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,26 @@
 *generated-sources*
 /bin
 /xtend-gen
+
+
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+.classpath
+.project
+
+target/
+bin/
+node_modules/
+generated-sources/
+.settings/
+
